--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 
         // あなたの Firebase 設定
         const firebaseConfig = {
-    apiKey: "AIzaSyDtxS5IwIdvZDrxVJy5okWN5XmTAj1TeuY",
-    authDomain: "economy-58c85.firebaseapp.com",
-    projectId: "economy-58c85",
-    storageBucket: "economy-58c85.firebasestorage.app",
-    messagingSenderId: "935916061387",
-    appId: "1:935916061387:web:3c66e724092052eea9514e",
-    measurementId: "G-T1WT7ZMQW6"
+    apiKey: "AIzaSyAwtZfOUWhvB6gIUopmJthdp6ogZnX1-Jo",
+    authDomain: "travel-4df2d.firebaseapp.com",
+    projectId: "travel-4df2d",
+    storageBucket: "travel-4df2d.firebasestorage.app",
+    messagingSenderId: "178203771423",
+    appId: "1:178203771423:web:af2ed2ead6777d7ac50b2a",
+    measurementId: "G-ZCY693QKBV"
         };
 
         // Firebase の初期化
@@ -114,6 +114,7 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
