--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>経済のたまり場</title>
+    <title>旅行オタクのたまり場</title>
     <!-- Font Awesome (アイコン用) を追加 -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
@@ -16,10 +16,10 @@
         
         <!-- ★修正点: 画像の上に重ねるためのコンテナ (.header-content) を追加★ -->
         <div class="header-content">
-            <h1>政治のたまり場</h1>
-            <p>このサイトは政治について議論するサイトです。できることは主に、以下の３つです</p>
+            <h1>旅行オタクのたまり場</h1>
+            <p>このサイトは旅行（おすすめの観光地、おすすめ旅グッズ）について語り合うするサイトです。できることは主に、以下の３つです</p>
             <nav>
-                <li>1.政治に関する話題を投稿</li>
+                <li>1.旅行に関する話題を投稿</li>
                 <li>2.投稿に対して、いいねや返信で参加</li>
                 <li>3.話題への反応を見て考察や語り合って楽しむ</li>
             </nav>
@@ -77,13 +77,13 @@
 
         // あなたの Firebase 設定
         const firebaseConfig = {
-    apiKey: "AIzaSyAwtZfOUWhvB6gIUopmJthdp6ogZnX1-Jo",
-    authDomain: "travel-4df2d.firebaseapp.com",
-    projectId: "travel-4df2d",
-    storageBucket: "travel-4df2d.firebasestorage.app",
-    messagingSenderId: "178203771423",
-    appId: "1:178203771423:web:af2ed2ead6777d7ac50b2a",
-    measurementId: "G-ZCY693QKBV"
+ 　apiKey: "AIzaSyAwtZfOUWhvB6gIUopmJthdp6ogZnX1-Jo",
+  authDomain: "travel-4df2d.firebaseapp.com",
+  projectId: "travel-4df2d",
+  storageBucket: "travel-4df2d.firebasestorage.app",
+  messagingSenderId: "178203771423",
+  appId: "1:178203771423:web:af2ed2ead6777d7ac50b2a",
+  measurementId: "G-ZCY693QKBV"
         };
 
         // Firebase の初期化
@@ -114,6 +114,7 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
