--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <!-- 画像をヘッダーの背景として配置 -->
-        <img src="economy.jpg" alt="経済のイメージ" id="header-image">
+        <img src="travel.jpg" alt="旅行のイメージ" id="header-image">
         
         <!-- ★修正点: 画像の上に重ねるためのコンテナ (.header-content) を追加★ -->
         <div class="header-content">
@@ -114,6 +114,7 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
